--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ Global Style
     border: 0;
     outline: 0;
     font-size: 100%;
+    zoom: 90%;
     vertical-align: baseline;
     background: transparent;
 }
