--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ nav ul {
 }
 
 nav li {
-    margin-right: 10px;
+    margin-right: 5%;
     transition: all 0.1s linear;
 }
 
@@ -123,7 +123,7 @@ nav h2 {
     font-size: 2em;
     text-align: left;
     padding: 0;
-    margin: 20px 0 0 10%;
+    margin: 20px 0 0 5%;
     font-family: 'Indie Flower', cursive;
     transition: all 0.1s linear;
 }
@@ -132,7 +132,7 @@ nav h3 {
     font-size: 1.5em;
     text-align: left;
     padding: 0 45px;
-    margin: 65px 0 0 10%;
+    margin: 65px 0 0 5%;
     color: #0075AC;
     font-weight: bolder;
     transition: all 0.1s linear;
